--- a/NameSearch/NameSearch/MainWindow.xaml
+++ b/NameSearch/NameSearch/MainWindow.xaml
@@ -1,12 +1,53 @@
-﻿<Window x:Class="NameSearch.MainWindow"
+﻿<!-- Augusto Serrao
+     Deepti Aggarwal
+     Hartaj Dhillon
+    Gagandeep singh
+    Shoaib Hassan
+-->
+    
+<Window x:Class="NameSearch.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NameSearch"
+        xmlns:local1="clr-namespace:NameSearch.ValueConverters"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Name Search" Height="350" Width="525" Icon="Images/names.jpg">
+    <Window.Resources>
+        <local1:ResultToForegroundVC  x:Key="resultToForegroundVC"></local1:ResultToForegroundVC>
+        <local1:ResultToMessageVC  x:Key="resultToMessageVC"></local1:ResultToMessageVC>
+        <local1:ResultToVisibilityVC  x:Key="resultToVisibilityVC"></local1:ResultToVisibilityVC>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.Background>
+            <ImageBrush ImageSource="Images/question_mark.jpg" Stretch="UniformToFill"/>
+        </Grid.Background>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Label Content="Name Search" FontSize="35" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#2d76ed" FontWeight="Bold" Background="#EFFFFFFF" Padding="5, 3" Margin="5"/>
+
+        <StackPanel Orientation="Vertical" Grid.Row="1" Margin="0, 20">
+            <Label Content="Boy's name:" FontWeight="Bold" Background="#EFFFFFFF" Foreground="#2d76ed" HorizontalAlignment="Center" FontSize="20"/>
+            <TextBox Height="40" Margin="30, 5, 30, 0" Text="{Binding BoyName}" VerticalContentAlignment="Center" FontSize="22"/>
+        </StackPanel>
+
+        <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="1" Margin="0, 20">
+            <Label Content="Girl's name:" FontWeight="Bold" Background="#EFFFFFFF" Foreground="#2d76ed" HorizontalAlignment="Center" FontSize="20"/>
+            <TextBox Height="40" Margin="30, 5, 30, 0" Text="{Binding GirlName}" VerticalContentAlignment="Center" FontSize="22"/>
+        </StackPanel>
+
+        <Label Grid.Row="2" Grid.ColumnSpan="2" Content="{Binding Path=Result, Converter={StaticResource resultToMessageVC}}" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" Background="#EFFFFFFF" FontSize="20" Foreground="{Binding Path=Result, Converter={StaticResource resultToForegroundVC}}" Visibility="{Binding Path=Result, Converter={StaticResource resultToVisibilityVC}}"/>
+
+        <Button Grid.Row="3" Grid.ColumnSpan="2" Content="Search" FontSize="20" FontWeight="bold" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10, 7" Click="Button_Search_Click"/>
     </Grid>
 </Window>
